...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    </view>
                    <navigationItem key="navigationItem" title="News" id="1sK-L0-G1L"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1424" y="-902"/>
        </scene>
        <!--Categories-->
...
                                </cells>
                            </collectionView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="aNc-pC-3gh"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    </view>
                    <navigationItem key="navigationItem" title="Categories" id="Cbf-qQ-owW"/>
                    <connections>
                        <outlet property="collectionView" destination="ecG-77-LO0" id="I8U-Ta-dnd"/>
                        <segue destination="O49-oB-iSb" kind="show" identifier="toDetailNews" id="kQr-RK-5Cw"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="VZ6-rb-2ec" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                            <constraint firstItem="T6m-Vf-DkS" firstAttribute="centerX" secondItem="9QS-R1-EyR" secondAttribute="centerX" id="bGl-gK-5G8"/>
                            <constraint firstItem="T6m-Vf-DkS" firstAttribute="leading" secondItem="mgs-Af-izg" secondAttribute="leading" id="bXT-K4-JV6"/>
                            <constraint firstItem="mgs-Af-izg" firstAttribute="leading" secondItem="Zpq-XX-zbM" secondAttribute="leading" id="fLx-oP-agb"/>
                            <constraint firstItem="mgs-Af-izg" firstAttribute="bottom" secondItem="Zpq-XX-zbM" secondAttribute="bottom" id="zip-9i-qtY"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Favorites" id="brA-g0-04z"/>
                    <connections>
                        <outlet property="searchBar" destination="T6m-Vf-DkS" id="GTx-ld-74y"/>
                        <outlet property="tableView" destination="mgs-Af-izg" id="MAV-fd-a9z"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Zzi-k8-cg7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
            <point key="canvasLocation" x="-39" y="273"/>
        </scene>
        <!--Home-->
        <scene sceneID="y6Q-6H-bsr">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WaY-A2-a51" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Home" image="homekit" catalog="system" id="jVd-h5-dk1"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="GlM-dp-iSD">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <viewLayoutGuide key="safeArea" id="FbG-gH-RIt"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="FeD-KV-b0W"/>
                    <navigationItem key="navigationItem" title="Settings" id="e8L-57-iFm">
                        <barButtonItem key="rightBarButtonItem" title="Log out" id="dRJ-iw-Vzi">
                            <connections>
                                <action selector="logOutButton:" destination="LQc-KV-Klg" id="CvB-pw-cst"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
            <point key="canvasLocation" x="-2538" y="273"/>
        </scene>
        <!--For you-->
        <scene sceneID="XNj-hQ-87r">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Rtx-fg-z1x" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="For you" image="magnifyingglass" catalog="system" id="tlb-sj-KwH"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0Fg-8r-ugK">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
